<resources>
    <string name="app_name">FindMeApp</string>
    <string name="splash_transition_name">splashImage</string>
    <string name="patient_hello">Hola %1$s, por favor elija cualquiera de las opciones abajo si necesita ayuda:</string>
    <string name="patient_family_menu">Mi familia</string>
    <string name="patient_pet_menu">Mascotas de la casa</string>
    <string name="patient_care_takers">Personas que me cuidan</string>
    <string name="patient_places_to_remenber">Lugares que debo recordar</string>
    <string name="patient_call_help">Necesitas Ayuda?</string>
    <!-- Menu Titles -->
    <string name="beacon_option">Lista de beacons</string>
    <string name="patients_option">Lista de pacientes</string>
    <string name="logout_option">Salir</string>
    <!-- User Types Description-->
    <string name="user_type_caretaker">Al registrarse como cuidador tranda acceso a la informacion del paciente, su locaclizacion y la capacidad de modificar la informacion a la que este tiene acceso</string>
    <string name="user_type_patient">Al registrar un usuario como paciente este vera la informacion que su cuidador publique y mandara la informacion del lugar en donde este y sus alrededores</string>
</resources>
